--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,24 @@
-<div class="content">
-  <div class="o-c">
-    <div>
-      <div class="card">
-        <p class="a-o-i">OTP
-        <ng-otp-input #ngOtpInput (onInputChange)="onOtpChange($event)" *ngIf="showOtpComponent" [config]="config"></ng-otp-input>
-        <span *ngIf="otp" class="o-t-p">Entered otp :-{{otp}}</span>
+<div class="container-fluid">
+  <!-- <div class="o-c"> -->
+  <div>
+    <div class="card m-auto p-4 text-center shadow " style="max-width: 25rem;">
+      <p class="a-o-i">OTP
+        <br />
+        <ng-otp-input #ngOtpInput (onInputChange)="onOtpChange($event)" *ngIf="showOtpComponent" [config]="config"
+          class="mt-4"></ng-otp-input>
+        <!-- <span *ngIf="otp" class="o-t-p">Entered otp :-{{otp}}</span> -->
       </p>
-      <button (click)="onSubmit()" >Submit</button>
-
-      </div>
-      <br><br>
-      <!--<button (click)= "submit()">
-        Submit
-      </button>-->
-      <!--<input type="button" value="Submit" (click)="onSubmit()" />  -->
-      <br><br>
+      <br />
+      <button (click)="onSubmit()" class="btn btn-primary btn-block text-center w-75 mx-auto">Submit</button>
 
     </div>
+    <br><br>
+    <!--<button (click)= "submit()">
+        Submit
+      </button>-->
+    <!--<input type="button" value="Submit" (click)="onSubmit()" />  -->
+    <br><br>
+
   </div>
+  <!-- </div> -->
 </div>
