--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
-  <div class="container">
-    <img src="assets/img/TA_Logo.PNG" >
+  <div class="container" style="width: 100%;">
+    <img src="assets/img/TA_Logo.PNG" style="height:15vh;">
   </div>
