--- a/src/app/confirmation-page/confirmation-page.component.html
+++ b/src/app/confirmation-page/confirmation-page.component.html
@@ -1,10 +1,9 @@
-<div class="content">
-  <div class="o-c">
-    <div>
-      <div class="card">
+<div class="container-fluid">
+  <div class="a-o-i-t">
+    <div class="m-auto p-4 text-center shadow " style="max-width: 25rem;">
         <p class="a-o-i">Date of Birth:
 <mat-form-field>
-  <input matInput [matDatepicker]="picker" placeholder="    mm/dd/yyyy">
+  <input matInput [matDatepicker]="picker" placeholder="mm/dd/yyyy">
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker startView="year" [startAt]="startDate"></mat-datepicker>
 </mat-form-field>
@@ -13,15 +12,14 @@ SSN:
 <input type="text" name="ssn" style="width:200px; height:30px" value="" placeholder="XXX-XX">
 
 </p>
-<div style="float: left; width: 250px">
-  <button (click)="onConfirm()" >Confirm</button>
-</div>
-<div style="float: right; width: 150px">
-  <button (click)="onCancel()" >Cancel</button>
+<div style="float: left; width:150px">
+  <button (click)="onConfirm()" class="btn btn-primary btn-block text-center w-75 mx-auto">Confirm</button>
 </div>
 
-<br>
+<div style="float: right; width:150px">
+  <button (click)="onCancel()" class="btn btn-primary btn-block text-center w-75 mx-auto">Cancel</button>
 </div>
+<br>
 </div>
 </div>
 </div>
